tdf#124026: map window resizing-related cursors to their Qt equivalents

there is no direct Qt equivalent of X11 xc_[top|bottom|left|right]_side
cursors, but those come at least close

Change-Id: Ifd442c46c08c71b1e1b9ddac42628b38eefee47f
Reviewed-on: https://gerrit.libreoffice.org/69797
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit 167812fe0d77b993427e7dca112f319a92942a3c)